src/objects/InMail__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Rate__c</fullName>
        <formula>Accepted__c/Sent__c</formula>
        <label>Acceptance Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <label>Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Period_for_TVs__c</fullName>
        <formula>IF(Week_Ending_On_Friday__c = TODAY(),1, 
IF(Week_Ending_On_Friday__c&gt;= TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Week_Ending_On_Friday__c&gt;= DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Period for TVs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined__c</fullName>
        <label>Declined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Response__c</fullName>
        <label>No Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_InMail__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (InMail)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Kirsten Eilertsen</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Adam Pasti</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
                <value>
                    <fullName>Megan Griffin</fullName>
                </value>
                <value>
                    <fullName>Federika Cariati</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <formula>(Accepted__c+Declined__c)/Sent__c</formula>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <label>Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Use__c</fullName>
        <label>Template Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Week_Ending_On_Friday__c</fullName>
        <label>Week Ending On (Friday)</label>
        <type>Date</type>
    </fields>
    <label>InMail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Week_Ending_On_Friday__c</columns>
        <columns>Recruiter__c</columns>
        <columns>Sent__c</columns>
        <columns>Accepted__c</columns>
        <columns>Declined__c</columns>
        <columns>No_Response__c</columns>
        <columns>Acceptance_Rate__c</columns>
        <columns>Response_Rate__c</columns>
        <columns>Template_Use__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>InMail Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InMails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>